# Sandroid_Dexray-Intercept

./: .gitignore  DOCS_SETUP.md  README.md  example_custom_script.js  package-lock.json  package.json  requirements.txt  tsconfig.json
.github/: README.md
.github/workflows/: docs-check.yml  docs.yml  publish.yml
agent/: hooking_profile_loader.ts
agent/anticertpinning/: README.md  acp.js  acp_logging.js  android-certificate-unpinning-fallback.js  android-certificate-unpinning.js  android-disable-root-detection.js  android-proxy-override.js  android-system-certificate-injection.js  config.js  native-connect-hook.js  native-tls-hook.js
agent/crypto/: aes.ts  encodings.ts  keystore.ts
agent/database/: sql.ts
agent/dex/: dex_unpacking.ts  load_library.ts
agent/file/: file_system_hooks.ts
agent/ipc/: binder.ts  broadcast.ts  intents.ts  shared_prefs.ts
agent/jni/: jni_trace.ts
agent/jni/jnitrace-engine/: package.json  tsconfig.json
agent/jni/jnitrace-engine/lib/: compat.ts  engine.ts  index.ts
agent/jni/jnitrace-engine/lib/data/: jni_env.json
agent/jni/jnitrace-engine/lib/internal/: jni_callback_manager.ts
agent/jni/jnitrace-engine/lib/jni/: java_vm_interceptor.ts  jni_env_interceptor.ts
agent/jni/jnitrace-engine/lib/utils/: java_method.ts  types.ts
agent/network/: sockets.ts  web.ts
agent/process/: nativelibrary.ts  process.ts  runtime.ts  string.ts
agent/security/: bypass.ts
agent/services/: bluetooth.ts  camera.ts  clipboard.ts  location.ts  telephony.ts
agent/utils/: android_runtime_requests.ts  error_utils.ts  hook_registry.ts  javalib.ts  logging.ts  misc.ts  safe_java.ts  safe_native.ts
docs/: Makefile  conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree  installation.doctree  quickstart.doctree
docs/_build/doctrees/api/: index.doctree  python-api.doctree  typescript-api.doctree
docs/_build/doctrees/development/: creating-hooks.doctree  index.doctree
docs/_build/doctrees/user-guide/: cli-usage.doctree  hook-configuration.doctree  index.doctree  output-formats.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  quickstart.html  search.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/dexray_intercept/: appProfiling.html
docs/_build/html/api/: index.html  python-api.html  typescript-api.html
docs/_build/html/development/: creating-hooks.html  index.html
docs/_build/html/user-guide/: cli-usage.html  hook-configuration.html  index.html  output-formats.html
docs/_static/: custom.css
docs/api/: index.rst  python-api.rst  typescript-api.rst
docs/development/: creating-hooks.rst  index.rst
docs/user-guide/: cli-usage.rst  hook-configuration.rst  index.rst  output-formats.rst
samples/: AndroidBanker.apk  BianLian.apk  INFO.md
scripts/: setup-docs.sh
src/dexray_intercept/: __init__.py  about.py  ammm.py  appProfiling.py  parser.py  profiling.js
src/dexray_intercept.egg-info/: PKG-INFO  requires.txt
src/dexray_intercept/formatters/: console.py
src/dexray_intercept/models/: events.py  profile.py
src/dexray_intercept/parsers/: crypto.py  factory.py  jni_trace.py  services.py
src/dexray_intercept/services/: hook_manager.py  instrumentation.py  mitmproxy_manager.py  profile_collector.py
src/dexray_intercept/utils/: hexdump.py
tests/android_apps/e2e_tests/: test_results.md
tests/android_apps/e2e_tests/AcpE2E/: THIRD_PARTY_LICENSES.md  settings.gradle
tests/android_apps/e2e_tests/AcpE2E/app/: build.gradle
tests/android_apps/e2e_tests/CryptoE2E/: settings.gradle
tests/android_apps/e2e_tests/CryptoE2E/app/: build.gradle
tests/android_apps/e2e_tests/DatabaseE2E/: settings.gradle
tests/android_apps/e2e_tests/DatabaseE2E/app/: build.gradle
tests/android_apps/e2e_tests/DatabaseE2E/app/src/main/cpp/: CMakeLists.txt  sqlite_native_tests.c
tests/android_apps/e2e_tests/DexE2E/: TestPayload.java  settings.gradle
tests/android_apps/e2e_tests/DexE2E/app/: build.gradle
tests/android_apps/e2e_tests/FileE2E/: settings.gradle
tests/android_apps/e2e_tests/FileE2E/app/: build.gradle
tests/android_apps/e2e_tests/FileE2E/app/src/main/cpp/: CMakeLists.txt  file_delete_native.c
tests/android_apps/e2e_tests/IpcE2E/: settings.gradle
tests/android_apps/e2e_tests/IpcE2E/app/: build.gradle
tests/android_apps/e2e_tests/JniE2E/: settings.gradle
tests/android_apps/e2e_tests/JniE2E/app/: build.gradle
tests/android_apps/e2e_tests/JniE2E/app/src/main/cpp/: CMakeLists.txt  jni_env_arrays.c  jni_env_calls.c  jni_env_core.c  jni_env_exceptions.c  jni_env_methods_fields.c  jni_env_refs.c  jni_env_regvm.c  jni_env_strings.c
tests/android_apps/e2e_tests/NetworkE2E/: settings.gradle
tests/android_apps/e2e_tests/NetworkE2E/app/: build.gradle
tests/android_apps/e2e_tests/NetworkE2E/app/src/main/cpp/: CMakeLists.txt  net_native_sockets.c
tests/android_apps/e2e_tests/ProcessE2E/: settings.gradle
tests/android_apps/e2e_tests/ProcessE2E/app/: build.gradle
tests/android_apps/e2e_tests/ProcessE2E/app/src/main/cpp/: CMakeLists.txt  processchild.c  processnative.c
tests/android_apps/e2e_tests/ProcessRuntimeE2E/: settings.gradle
tests/android_apps/e2e_tests/SecurityE2E/: settings.gradle
tests/android_apps/e2e_tests/ServicesE2E/: bumble_gatt.json  bumble_gatt_server.py  settings.gradle
(+114 files in other folders)
